# AdministerAppServer

./: .gitignore  EXAMPLE.json  README.md  main.old.py  main.py  models.py  pyproject.toml  reqs.txt
AOS/: __init__.py  __main__.py  database.py  middleware.py
AOS/administer_app_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
AOS/frontend/: __init__.py  index.html
AOS/frontend/css/: main.css
AOS/frontend/js/: main.js
AOS/frontend/scss/: main.scss
AOS/models/: RatingPayload.py
AOS/reporting/: GraphReporter.py  report.py
AOS/routes/: api.py  backend.py  frontend.py  public.py  public_api.py
administer_app_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data/: donations.json  list.json
data/apps/: 1.json  2.json
data/places/: 854823443.json  8787038683.json
modules/: ColorDetection.py  database.py
src/: __init__.py  __main__.py  config.py  database.py  middleware.py  release_bot.py
src/administer_app_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/frontend/: index.html
src/routes/: api.py  frontend.py  public_api.py
